# pybase26

./: .gitignore  LICENSE.txt  README.md  app.py  pyproject.toml  requirements.txt
.github/workflow/: publish.yaml
.github/workflows/: publish.yaml
src/base26/: __init__.py  __main__.py  base26.py
tests/: test_base26.py
