[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base26"
version = "1.0.2"
description = "Package implements base26 encoding/decoding algorithm."
authors = [
    { name = "Sergey Popinveskiy", email = "sergey@yggdr.io" },
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest==7.1.2"]

[project.urls]
Source = "https://github.com/yggdr-corp/pybase26"
